<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".userinterface.fragments.NewsPagingFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_news_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.chrisfry.nerdnews.userinterface.widgets.SwipeRefreshViewPager
                android:id="@+id/view_pager_news"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</FrameLayout>