...
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin">

        <TextView
                android:id="@+id/tv_article_item_title_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="@dimen/medium_text"
...
                android:layout_marginTop="@dimen/default_margin"
                android:textSize="@dimen/medium_text_3"
                android:lineSpacingExtra="7dp"
                android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It 

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_go_to_article"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="36dp"
                android:paddingStart="@dimen/button_horizontal_padding"
                android:paddingEnd="@dimen/button_horizontal_padding"
                android:paddingTop="@dimen/button_vertical_padding"
...
