<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/menu_refresh"
            android:icon="@drawable/ic_refresh"
            app:showAsAction="always"
            android:title="@string/menu_refresh_title"/>
</menu>